Update my game to main page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body data-new-gr-c-s-check-loaded="14.1095.0" data-gr-ext-installed="">
         <header>Linh Le Tu</header>
         <nav>
+            <a href="TicTacToe_game/index.html">My Tic Tac Toe Game!</a>
             <a href="https://tulinh.dev.fast.sheridanc.on.ca/A2Content/A2.html">Assignment2</a>
             <a href="https://tulinh.dev.fast.sheridanc.on.ca/A3Content/A3.html">Assignment3</a>
             <a href="https://tulinh.dev.fast.sheridanc.on.ca/A4Content/A4.html">Assignment4</a>
