--- a/LinhTuresume.html
+++ b/LinhTuresume.html
@@ -56,7 +56,9 @@
 	text-decoration: underline;
     }
     .title {
-        text-align: center; margin: 0; padding-top : 0;
+        text-align: center; 
+        margin: 0; 
+        padding-top : 0;
     }
   </style>
     <body>
@@ -110,8 +112,8 @@
         <ul>
             <li>Make effective use of hands-on learning by making the resume with HTML and CSS instead of traditional Word Document</li>
             <li>Follow a variety of approaches in activities and techniques to design a simple and clean resume</li>
-            <li>This resume is actually made from CSS and HTML here:<span class="blue"> <a href="https://cutiebrownie.github.io/LinhTuresume.html">here</a> </span></li>
-            <li>Checkout my ongoing Web development journey via <span class="blue"> <a href="https://cutiebrownie.github.io/"></a>here</span></li>
+            <li>This resume is actually made from CSS and HTML here:<span class="blue"><a href="https://cutiebrownie.github.io/LinhTuresume.html">here</a> </span></li>
+            <li>Checkout my ongoing Web development journey via <span class="blue"><a href="https://cutiebrownie.github.io/"></a>here</span></li>
         </ul>
 
         <h2>Education</h2>
