Upload my resume on main page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="https://tulinh.dev.fast.sheridanc.on.ca/A2Content/A2.html">Assignment2</a>
             <a href="https://tulinh.dev.fast.sheridanc.on.ca/A3Content/A3.html">Assignment3</a>
             <a href="https://tulinh.dev.fast.sheridanc.on.ca/A4Content/A4.html">Assignment4</a>
+            <a href="https://tulinh.dev.fast.sheridanc.on.ca/LinhTuresume.html">My Resume</a>
             </nav>
         <main>
             <div>
