--- a/LinhTuresume.html
+++ b/LinhTuresume.html
@@ -62,9 +62,8 @@
     }
   </style>
     <body>
-
         <h1 style="margin-bottom:0;">Linh Tu</h1>
-        <p class="title">Mississauga,ON  | 647 581 8284 | <span class="blue">linhtu2207@gmail.com</span> | <span class="blue"><a href="https://www.linkedin.com/in/linh-t%E1%BB%AB-53606120a/">Linkedin</a></span>
+        <p class="title">Mississauga,ON  | 647 581 8284 | <span class="blue">linhletu2207@gmail.com</span> | <span class="blue"><a href="https://www.linkedin.com/in/linh-tu-53606120a/">Linkedin</a></span>
         </p>
         <hr>
         <h2>Profile Summary</h2>
