--- a/CoverGen.html
+++ b/CoverGen.html
@@ -86,7 +86,7 @@
 
                     var newWin = window.open('', '', 'height=650, width=650');
                     newWin.document.write('');
-                    newWin.document.write('<title>Print Content of Div element by  using Javascript</title>');
+                    newWin.document.write('<title>Linh Tu Cover Letter</title>');
                     newWin.document.write('<h2 style="text-align: center;">Linh Tu</h2>');
                     newWin.document.write('<p style="text-align: center; margin: 0; padding-top : 0;">Mississauga,ON  | 647 581 8284 | <span class="blue">linhtu2207@gmail.com</span> | <span class="blue"><a href="https://www.linkedin.com/in/linh-t%E1%BB%AB-53606120a/">Linkedin</a></span><hr>');
                     newWin.document.write(contentOfDiv);
